// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OfficesPeople renders with data 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Unknown
    officesPeopleList={
      Array [
        Object {
          "officeList": Array [
            Object {
              "address": "21301 burbank blvdWoodland hills, CA",
              "officeCategories": Array [
                Object {
                  "drupal_id": 1,
                  "icon": "test.png",
                  "title": "test",
                  "weight": 1,
                },
              ],
              "title": "Office Name",
              "type": "office",
            },
            Object {
              "address": "21301 burbank blvdWoodland hills, CA",
              "title": "Office Name",
              "type": "office",
            },
          ],
          "placeName": "New York",
        },
        Object {
          "drupal_id": 2,
          "officeList": Array [
            Object {
              "address": "21301 burbank blvdWoodland hills, CA",
              "title": "Office Name",
              "type": "office",
            },
            Object {
              "address": "21301 burbank blvdWoodland hills, CA",
              "title": "Office Name",
              "type": "office",
            },
          ],
          "placeName": "Asia",
        },
        Object {
          "drupal_id": 3,
          "officeList": Array [
            Object {
              "address": "21301 burbank blvdWoodland hills, CA",
              "title": "Office Name",
            },
            Object {
              "address": "21301 burbank blvdWoodland hills, CA",
              "title": "Office Name",
            },
          ],
          "placeName": "North America",
        },
        Object {
          "drupal_id": 4,
          "officeList": Array [
            Object {
              "address": "21301 burbank blvdWoodland hills, CA",
              "title": "Office Name",
            },
            Object {
              "address": "21301 burbank blvdWoodland hills, CA",
              "title": "Office Name",
            },
          ],
          "placeName": "Europe",
        },
      ]
    }
    setFilterFacet={[Function]}
  />
</Router>
`;

exports[`OfficesPeople renders without data 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Unknown
    setFilterFacet={[Function]}
  />
</Router>
`;
